--- a/via-manager.html
+++ b/via-manager.html
@@ -11,9 +11,9 @@
 
     <section id="content" class="ac-content">
         <table>
-        <h1><center>Create Project</center></h1><br> <br><br> <br>
+        <h1><center>Via Manager</center></h1><br> <br><br> <br>
         <center> <body></body>
-        <p><strong> Via Manager</p></strong></p>
+        <p><strong>Create Project</p></strong></p>
         
         </body >
 
@@ -24,11 +24,11 @@
         <td width="35%" valign="top">   
             <nav>
                 <ul>
-                    <li><a href="">CUSTOMMERS</a></li>
-                    <li><a href="">PROJECTS</a></li>
-                    <li><a href="">LOGGING WORK</a></li>
-                    <li><a href="">MY TEAMS</a></li>
-                    <li><a href="">MY DASHBOARDS</a></li>
+                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/accounts/?status=CLOSED&status=OPEN">CUSTOMMERS</a></li>
+                    <li><a href="https://via-consulting.atlassian.net/projects">PROJECTS</a></li>
+                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/my-work/week?type=LIST">LOGGING WORK</a></li>
+                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/teams">MY TEAMS</a></li>
+                    <li><a href="https://via-consulting.atlassian.net/jira/dashboards">MY DASHBOARDS</a></li>
                 </ul>
             </nav>
         </td>
