--- a/via-manager.html
+++ b/via-manager.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
-        <style type="text/css">
-            seletor {propriedade: valor;}
-          </style>
         <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@2.0.0/dist/bundle.css" media="all">
         <script src="https://connect-cdn.atl-paas.net/all.js" async></script>
     </head>
-
+    <head>
+        <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
+    </head>
     <section id="content" class="ac-content">
         <table>
         <h1><center>Via Manager</center></h1><br> <br><br> <br>
