--- a/via-manager.html
+++ b/via-manager.html
@@ -7,6 +7,11 @@
     <head>
         <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
     </head>
+
+    <script>
+        
+    </script>
+
     <section id="content" class="ac-content">
         <table>
         <h1><center>Via Manager</center></h1><br> <br><br> <br>
