--- a/via-manager.html
+++ b/via-manager.html
@@ -7,9 +7,9 @@
     <head>
         <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
     </head>
-
+    <img src="">
     <script>
-        
+
     </script>
 
     <section id="content" class="ac-content">
