--- a/via-manager.html
+++ b/via-manager.html
@@ -7,6 +7,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
     </head>
+
     <script type="text/javascript" src="js/via-manager.js"></script>
 
     <section id="content" class="ac-content">
@@ -22,12 +23,7 @@
             cellpadding="10">
             <tr>
         <td width="35%" valign="top">
-            <div class="menu-trigger" id="menu-trigger">
-             <div></div>
-             <div></div>
-             <div></div>
-            </div> 
-            <nav class="menu-hide" id="menu-hidde">
+            <nav>
                 <ul>
                     <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/accounts/?status=CLOSED&status=OPEN">CUSTOMMERS</a></li>
                     <li><a href="https://via-consulting.atlassian.net/projects">PROJECTS</a></li>
