--- a/via-manager.html
+++ b/via-manager.html
@@ -3,40 +3,46 @@
     <head>
         <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@2.0.0/dist/bundle.css" media="all">
         <script src="https://connect-cdn.atl-paas.net/all.js" async></script>
-    </head>
-    <head>
-        <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
-    </head>
 
-    <script type="text/javascript" src="js/via-manager.js"></script>
+    </head>
 
     <section id="content" class="ac-content">
+
         <table>
-        <h1><center>Via Manager</center></h1><br> <br><br> <br>
-        <center> <body></body>
-        <p><strong>Create Project</p></strong></p>
-        
-        </body >
+            &nbsp;&nbsp;&nbsp;&nbsp;<h1><center>Via Manager</center></h1><br> <br><br> <br><br> 
+        <center><p><strong>Create Project</p></strong></p></center>
 
         <body>
+            <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
+
+            <header></header>
+            &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" id="chk">
+           <label for"chk">
+               <img src="56763.png">
+           </label>
+
+
+           <div class="bg"></div>
+           <nav>
+            <ul>
+                
+                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/accounts/?status=CLOSED&status=OPEN">CUSTOMMERS</a></li>
+                <li><a href="https://via-consulting.atlassian.net/projects">PROJECTS</a></li>
+                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/my-work/week?type=LIST">LOGGING WORK</a></li>
+                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/teams">MY TEAMS</a></li>
+                <li><a href="https://via-consulting.atlassian.net/jira/dashboards">MY DASHBOARDS</a></li>
+            </ul>
+        </nav>
             <table border="0" width="100%"
             cellpadding="10">
             <tr>
         <td width="35%" valign="top">
-            <nav>
-                <ul>
-                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/accounts/?status=CLOSED&status=OPEN">CUSTOMMERS</a></li>
-                    <li><a href="https://via-consulting.atlassian.net/projects">PROJECTS</a></li>
-                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/my-work/week?type=LIST">LOGGING WORK</a></li>
-                    <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/teams">MY TEAMS</a></li>
-                    <li><a href="https://via-consulting.atlassian.net/jira/dashboards">MY DASHBOARDS</a></li>
-                </ul>
-            </nav>
+
         </td>
         <td width="65%" valign="top">
-        <b>Project Name</b>: <input type="text" name="Project Name" size="30"
+        <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Name</b>: <input type="text" name="Project Name" size="30"
         placeholder="Type a name for project"> <br> <br>
-        <b>Client</b>: <input type="text" name="Account" size="30"
+        <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Client</b>: <input type="text" name="Account" size="30"
         placeholder="Insert the name of the Client"> <br> <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" class="btn btn-terciary"  name="create" id="create" value="CREATE">
         </form><br> <br><br> <br>
