--- a/via-manager.html
+++ b/via-manager.html
@@ -15,14 +15,10 @@
         <body>
             <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
 
-            <header></header>
-            &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" id="chk">
-           <label for"chk">
+            &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" id="chec">
+           <label for"chec">
                <img src="56763.png">
            </label>
-
-
-           <div class="bg"></div>
            <nav>
             <ul>
                 
@@ -32,7 +28,8 @@
                 <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/teams">MY TEAMS</a></li>
                 <li><a href="https://via-consulting.atlassian.net/jira/dashboards">MY DASHBOARDS</a></li>
             </ul>
-        </nav>
+            </nav>
+            </body>
             <table border="0" width="100%"
             cellpadding="10">
             <tr>
