--- a/via-manager.html
+++ b/via-manager.html
@@ -8,31 +8,7 @@
 
     <section id="content" class="ac-content">
 
-        <table>
-            &nbsp;&nbsp;&nbsp;&nbsp;<h1><center>Via Manager</center></h1><br> <br><br> <br><br> 
-        <center><p><strong>Create Project</p></strong></p></center>
-
-        <body>
-            <link rel="stylesheet" type="text/css" href="via-manager.css" media="screen" />
-
-           <nav>
-            <ul>
-                
-                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/accounts/?status=CLOSED&status=OPEN">CUSTOMMERS</a></li>
-                <li><a href="https://via-consulting.atlassian.net/projects">PROJECTS</a></li>
-                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/my-work/week?type=LIST">LOGGING WORK</a></li>
-                <li><a href="https://via-consulting.atlassian.net/plugins/servlet/ac/io.tempo.jira/tempo-app#!/teams">MY TEAMS</a></li>
-                <li><a href="https://via-consulting.atlassian.net/jira/dashboards">MY DASHBOARDS</a></li>
-            </ul>
-            </nav>
-            </body>
-            <table border="0" width="100%"
-            cellpadding="10">
-            <tr>
-        <td width="35%" valign="top">
-
-        </td>
-        <td width="65%" valign="top">
+    <center><body>
         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Name</b>: <input type="text" name="Project Name" size="30"
         placeholder="Type a name for project"> <br> <br>
         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Client</b>: <input type="text" name="Account" size="30"
@@ -46,6 +22,7 @@
           
     </section>
     </body>
+</center>
 
 
 
