--- a/via-manager.html
+++ b/via-manager.html
@@ -9,6 +9,7 @@
     <section id="content" class="ac-content">
 
     <center><body>
+        <br> <br><br> <br><br> <br><br> <br><br> <br>
         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Name</b>: <input type="text" name="Project Name" size="30"
         placeholder="Type a name for project"> <br> <br>
         <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Client</b>: <input type="text" name="Account" size="30"
@@ -18,7 +19,7 @@
                 </td>
         <table>
           
-        <center><p style="color: blue">Via Intern Project - Development</p></center>
+        <center><p style="color: blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Via Intern Project - Development</p></center>
           
     </section>
     </body>
