--- a/create-project.html
+++ b/create-project.html
@@ -2,21 +2,28 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@2.0.0/dist/bundle.css" media="all">
-        <script src="https://connect-cdn.atl-paas.net/all.js" async></script>
+        <script type="text/javascript" src="https://connect-cdn.atl-paas.net/all.js"></script>
+
     </head>
     <body>
-        <section id="content" class="ac-content">
-         <center>   <h1>Create Project</h1> </center>
+        <center>   <h1>Create Project</h1> </center>
          <center>
             <br><br><br><br>
-            <b>Project Name</b>: <input type="text" name="Project Name" size="30"
+            <b>Project Name</b>: <input type="text" id="project" value"" size="30"
             placeholder="Type a name for project">
             <br><br><br>
-            <b>Client</b>: <input type="text" name="Account" size="30"
-            placeholder="Insert the name of the Client"> <br> <br>
-            <input type="button" class="btn btn-terciary"  name="create" id="create" value="CREATE">
-            <center><p style="color: blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Via Intern Project - Development</p></center>
-        </center>     
+            <b>Client</b>: <input type="text" id="client" value"" size="30"
+            placeholder="Insert the name of the Client"> <br><br>
+            <button onclick="getValue()"> Create </button><p id="creater"></p>
+         </center>     
+            <script>        
+            function getValue(){
+                var Jbutton   = document.getElementById('creater');
+                var projecter = document.getElementById('project').value;
+                var custommer = document.getElementById('client').value;
+                Jbutton.innerHTML= projecter + '<br>' + custommer
+                }
+            </script>
         </section>
     </body>
 </html>
