--- a/create-project.html
+++ b/create-project.html
@@ -7,8 +7,12 @@
             function getValue(projects, clients) { 
                     var projects = document.getElementById("project").value;
                     var clients = document.getElementById("client").value;
-                    console.log(JSON.stringify({}))
-                    }
+                    console.log(dados {
+                        project : "project",
+                        client  : "client"
+                    )
+                }
+            }
         </script>
     </head>
     <body>
